--- a/index.html
+++ b/index.html
@@ -1,39 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Best Recipe for Mac and Cheese</title>
+<head>
+  <meta charset="utf-8">
+    <title>MMP240 Class Website</title>
 </head>
-<body>
-    <h1>Best Recipe for Mac and Cheese</h1>
-    <p>This is a recipe for one of the best mac and cheese dishes that will have you coming for seconds! It's easy to make and is extremely delicious!</p>
-
-    <img src="Mac&Cheese.jpeg" alt="Mac&Cheese.jpeg">
-    <ul>
-    <h2>Ingredients</h2>
-      <li>¼ cup butter</li> 
-      <li>2 ½ tablespoons all-purpose flour </li>
-      <li>3 cups milk </li>
-      <li>2 cups shredded sharp Cheddar cheese </li>
-      <li>½ cup grated Parmesan cheese </li>
-      <li>2 tablespoons butter </li>
-      <li>½ cup bread crumbs </li>
-      <li>1 pinch paprika</li>
-    </ul>
-
-    <ol>
-     <h2>Directions</h2> 
-       <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
-       <li>Cook macaroni according to the package directions. Drain.</li>
-       <li>Melt butter in a medium skillet over low heat. Gradually add flour, whisking until well combined. Slowly pour in milk, whisking constantly until smooth. Stir in cheeses, and cook over low heat until cheese is melted and the sauce is a little thick. Put macaroni in large casserole dish, and pour sauce over macaroni. Stir well.</li>
-        <li>Melt butter in a skillet over medium heat. Add breadcrumbs and brown. Spread over the macaroni and cheese to cover. Sprinkle with a little paprika.</li>
-        <li>Bake in the preheated oven for 30 minutes. Serve.</li>
-     </ol>
+  <body>
+   <h1>MMP240 Class Website</h1>
+    <h2>Mary Paulino</h2>
+    <img src="IMG_8329.JPG" alt="IMG_8329.JPG" width="150">
+    <p>Email: Marypaulino181@gmail.com</p>
+    <p>I'm a part time student aspiring to become a graphic designer. My major is Multimedia Programming and Design at Borough of Manhattan Community College. My dream is to one day get a degree in graphic design and obtain a job where I can use my skills to design something creative and interesting.</p>
     
-    <h2>Nutrition Facts </h2>
-<p><strong> Per Serving:</strong><br> 
-  <p>845 calories; protein 36.9g; carbohydrates 65.3g; fat 48.2g; cholesterol 141.6mg; sodium 881.2mg.</p>
-   
-    <script src="script.js"></script>
+  <h3>Assignments</h3>
+
   </body>
 </html>
