--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <img src="IMG_8329.JPG" alt="IMG_8329.JPG" width="150">
     <p>Email: Marypaulino181@gmail.com</p>
     <p>I'm a part time student aspiring to become a graphic designer. My major is Multimedia Programming and Design at Borough of Manhattan Community College. My dream is to one day get a degree in graphic design and obtain a job where I can use my skills to design something creative and interesting.</p>
-    
-  <h3>Assignments</h3>
 
+  <h3>Assignments</h3>
+  <ul>
+    <li><a href="recipe/recipe.html">"Recipe Assignment"</a><li>
+  </ul>
   </body>
 </html>
