--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h3>Assignments</h3>
   <ul>
-    <li><a href="recipe/recipe.html">"Recipe Assignment"</a><li>
+    <li><a href="recipe/recipe.html">Recipe Assignment</a><li>
   </ul>
   </body>
 </html>
